# pygns3tui

./: README.md  pyproject.toml  requirements.txt
pygns3tui/: main.py  ui.py
src/: controller.py  main.py  style.css  ui.py
