[tool.poetry]
name = "pygns3tui"
version = "1.0.0"
description = "TUI interface to manage GNS3 servers projects using the v2 API."
authors = ["Steve De Jongh <dejongh.st@gmail.com>"]
readme = "README.md"
packages = [{include = "pygns3tui"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
textual = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pygns3tui = "pygns3tui.main:main"
